[package]
authors = ["Joel Höner <athre0z@zyantific.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
name = "zydoc"
version = "0.3.2"

[dependencies]
anyhow = "1"
argh = "0.1"
handlebars = "4"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
codegen-units = 1
lto = "thin"
strip = true
panic = "abort"
